--- a/index.html
+++ b/index.html
@@ -10,30 +10,45 @@
 </head>
 <!--Body in progress-->
 <body>
+    <!--Header completed, other body elements are still in progress-->
     <header>
-        <h1>My Portfolio</h1>
+        <h1>Welcome to My Portfolio</h1>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="#About">About</a>
+                </li>
+                <li>
+                    <a href="#Experience">Experience</a>
+                </li>
+                <li>
+                    <a href="#Work">Work</a>
+                </li>
+                <li>
+                    <a href="#Contact">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
+    <div>
+        
+    </div>
     <main>
-        <section>
-
+        <!--Section elements are linked, visual and styling aspects still in progress-->
+        <section id="About">
+            <h2>About</h2>
         </section>
-        <section>
-
+        <section id="Experience">
+            <h2>Experience</h2>
         </section>
-        <section>
-
+        <section id="Work">
+            <h2>Work</h2>
+        </section>
+        <section id="Contact">
+            <h2>Contact</h2>
         </section>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
