Div, first section, and footer elements have all been completed in the html file. Reset.css file has been completed as well, will add more if necessary.

--- a/index.html
+++ b/index.html
@@ -19,36 +19,66 @@
                     <a href="#About">About</a>
                 </li>
                 <li>
-                    <a href="#Experience">Experience</a>
-                </li>
-                <li>
                     <a href="#Work">Work</a>
                 </li>
                 <li>
                     <a href="#Contact">Contact</a>
                 </li>
+                <li>
+                    <a href="#Resume">Experience</a>
+                </li>
             </ul>
         </nav>
     </header>
+    <!--Div element completed, will add or adjjust if necessary-->
     <div>
-        
+        <img src="./assets/images/animated-star-wars-image-0038.gif" alt="Cool Star Wars gif"/>
     </div>
     <main>
-        <!--Section elements are linked, visual and styling aspects still in progress-->
+        <!--Section elements are linked, styling aspects still in progress-->
+        <!--First section element completed-->
         <section id="About">
+        <article>
             <h2>About</h2>
-        </section>
-        <section id="Experience">
-            <h2>Experience</h2>
+            <p>My name is Erick Gonzalez. I am originally from Oxnard California. I am currently 26 years old with a background in hospitality and more specifically in bartending. 
+                Fun fact I am a huge Star Wars nerd. Although a bartender by profession, I have always been interested in learning to code. I have even tried learning on my own on a number of occasions. I believe my biggest obstacle was always lack of structure. Learning an infinite number of coding language and the intricacies of each seemed like such a daunting task. With my enrollment into the Coding BOOTCAMP at UCLA, I feel much more confident the skills I learn now will stick with me throughout my journey into the tech world. Thank you for visiting and feel free to hit the contact section if you need to reach me.
+            </p>
+        </article>
         </section>
         <section id="Work">
             <h2>Work</h2>
+            <card>
+                <img>
+            </card>
+            <card>
+                <img>
+            </card>
+            <card>
+                <img>
+            </card>
+            <card>
+                <img>
+            </card>
         </section>
         <section id="Contact">
             <h2>Contact</h2>
+            <p class="contact-info">805 300 7140</p>
+            <p class="contact-info">gonzalez.erick8@yahoo.com</p>
+            <p class="contact-info">
+                <a href="https://twitter.com/sith_lord_e" target="_blank">twitter</a>
+            </p>
+        </section>
+        <section id="Resume">
+            <h2>Resume</h2>
         </section>
     </main>
+    <!--Footer Completed, will add if necessary-->
     <footer>
+        <h3>Thank you for visitng!</h2>
+        <p>
+            &copy; Webpage designed by Erick Gonzalez
+        </p>
+    </footer>
     </footer>
 </body>
 </html>
