All html elements have been complete so far. Will add more if necessary. CSS file in progress.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#Contact">Contact</a>
                 </li>
                 <li>
-                    <a href="#Resume">Experience</a>
+                    <a href="./assets/other assets/2020 Resume..pdf" target="_blank">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -48,16 +48,19 @@
         <section id="Work">
             <h2>Work</h2>
             <card>
-                <img>
+                <h3>Horieson Refractored Code</h3>
+                <p>My was my first project refractoring code for a webpage.</p>
+                <img src="./assets/images/Screen Shot 2022-08-25 at 1.21.23 PM.png" alt="Horiseon Screenshot" />
             </card>
             <card>
-                <img>
+                <h3>Mobile Gaming App Placeholder</h3>
+                <p>This is an placeholder image a mobile gaming app.</p>
+                <img src="./assets/images/Screen Shot 2022-08-25 at 1.11.54 PM.png" alt="Placeholder Mobile Gaming App">
             </card>
             <card>
-                <img>
-            </card>
-            <card>
-                <img>
+                <h3>Art Featuring Webpage Placeholder</h3>
+                <p>This is a placeholder image for a webpage that showcases artwork.</p>
+                <img src="./assets/images/Screen Shot 2022-08-25 at 1.48.52 PM.png" alt="Placeholder Art Featuring Webpage">
             </card>
         </section>
         <section id="Contact">
@@ -68,13 +71,10 @@
                 <a href="https://twitter.com/sith_lord_e" target="_blank">twitter</a>
             </p>
         </section>
-        <section id="Resume">
-            <h2>Resume</h2>
-        </section>
     </main>
     <!--Footer Completed, will add if necessary-->
     <footer>
-        <h3>Thank you for visitng!</h2>
+        <h4>Thank you for visitng!</h4>
         <p>
             &copy; Webpage designed by Erick Gonzalez
         </p>
