--- a/index.html
+++ b/index.html
@@ -16,65 +16,81 @@
         <nav>
             <ul>
                 <li>
+                    <button>
                     <a href="#About">About</a>
+                    </button>
                 </li>
                 <li>
+                    <button>
                     <a href="#Work">Work</a>
+                    </button>
                 </li>
                 <li>
+                    <button>
                     <a href="#Contact">Contact</a>
+                    </button>
                 </li>
                 <li>
+                    <button>
                     <a href="./assets/other assets/2020 Resume..pdf" target="_blank">Resume</a>
+                    </button>
                 </li>
             </ul>
         </nav>
     </header>
     <!--Div element completed, will add or adjjust if necessary-->
-    <div>
+    <div class="banner">
         <img src="./assets/images/animated-star-wars-image-0038.gif" alt="Cool Star Wars gif"/>
     </div>
     <main>
         <!--Section elements are linked, styling aspects still in progress-->
         <!--First section element completed-->
         <section id="About">
-        <article>
+        <article class="bio">
             <h2>About</h2>
             <p>My name is Erick Gonzalez. I am originally from Oxnard California. I am currently 26 years old with a background in hospitality and more specifically in bartending. 
                 Fun fact I am a huge Star Wars nerd. Although a bartender by profession, I have always been interested in learning to code. I have even tried learning on my own on a number of occasions. I believe my biggest obstacle was always lack of structure. Learning an infinite number of coding language and the intricacies of each seemed like such a daunting task. With my enrollment into the Coding BOOTCAMP at UCLA, I feel much more confident the skills I learn now will stick with me throughout my journey into the tech world. Thank you for visiting and feel free to hit the contact section if you need to reach me.
             </p>
         </article>
         </section>
-        <section id="Work">
+        <section id="Work" class="cards">
             <h2>Work</h2>
-            <card>
-                <h3>Horieson Refractored Code</h3>
-                <p>My was my first project refractoring code for a webpage.</p>
-                <img src="./assets/images/Screen Shot 2022-08-25 at 1.21.23 PM.png" alt="Horiseon Screenshot" />
-            </card>
-            <card>
-                <h3>Mobile Gaming App Placeholder</h3>
-                <p>This is an placeholder image a mobile gaming app.</p>
-                <img src="./assets/images/Screen Shot 2022-08-25 at 1.11.54 PM.png" alt="Placeholder Mobile Gaming App">
-            </card>
-            <card>
-                <h3>Art Featuring Webpage Placeholder</h3>
-                <p>This is a placeholder image for a webpage that showcases artwork.</p>
-                <img src="./assets/images/Screen Shot 2022-08-25 at 1.48.52 PM.png" alt="Placeholder Art Featuring Webpage">
-            </card>
+            <div>
+                <article class="card">
+                        <h3>
+                            <a href="https://gon-erick1995.github.io/ch01-horiseon/" target="_blank">Horiseon Refractored Code</a>
+                        </h3>
+                        <p>My was my first project refractoring code for a webpage.</p>
+                        <img src="./assets/images/Screen Shot 2022-08-25 at 1.21.23 PM.png" alt="Horiseon Screenshot" />
+                </article>
+            </div>
+            <div>
+                <article class="card">
+                        <h3>Mobile Gaming App Placeholder</h3>
+                        <p>This is an placeholder image a mobile gaming app.</p>
+                        <img src="./assets/images/Screen Shot 2022-08-25 at 1.11.54 PM.png" alt="Placeholder Mobile Gaming App">
+                </article>
+            </div>
+            <div>
+                <article class="card">
+                        <h3>Art Featuring Webpage Placeholder</h3>
+                        <p>This is a placeholder image for a webpage that showcases artwork.</p>
+                        <img src="./assets/images/Screen Shot 2022-08-25 at 1.48.52 PM.png" alt="Placeholder Art Featuring Webpage">
+                </article>
+            </div>
         </section>
-        <section id="Contact">
+        <section id="Contact" class="contact-info">
             <h2>Contact</h2>
-            <p class="contact-info">805 300 7140</p>
-            <p class="contact-info">gonzalez.erick8@yahoo.com</p>
-            <p class="contact-info">
+            <p>805-300-7140</p>
+            <p>gonzalez.erick8@yahoo.com</p>
+            <p>
                 <a href="https://twitter.com/sith_lord_e" target="_blank">twitter</a>
             </p>
         </section>
     </main>
     <!--Footer Completed, will add if necessary-->
     <footer>
-        <h4>Thank you for visitng!</h4>
+        <h4>Thank you for visiting!</h4>
         <p>
             &copy; Webpage designed by Erick Gonzalez
         </p>
